2005-12-12  Andrew Cagney  <cagney@redhat.com>

	* ftrace.java: Delete reference to Proc .observableTaskRemoved.

2005-11-04  Jeff Johnston  <jjohnstn@redhat.com>

	* ftrace.java (TaskCreatedObserver.update): Remove unused
	Task reference.

2005-11-03  Andrew Cagney  <cagney@redhat.com>

	* ftrace.java: Update, Host.requestCreateAttachedProc renamed to
	.requestCreateAttachedContinuedProc.

2005-10-22  Andrew Cagney  <cagney@redhat.com>

	* ftrace.java: Do not set Task .traceFork.

2005-10-04  Andrew Cagney  <cagney@redhat.com>

	* ftrace.java: Use Host .requestCreateAttachedContinuedProc.

2005-10-03  Andrew Cagney  <cagney@redhat.com>

	* ftrace.java: Delete unused local variable "n".

2005-09-27  Andrew Cagney  <cagney@redhat.com>

	* ftrace.java: Use observableTaskRemoved, observableTaskAdded,
	observableProcAdded and observableProcRemoved.

2005-09-22  Andrew Cagney  <cagney@redhat.com>

	* Config.javin: Move to frysk/.
	* Rename again to frysk/bindir/.

	* Rename from frysk/bin/ to
	frysk/thisisnotthebindirectoryusedbyanddeletedbyant/.

2005-09-19  Andrew Cagney  <cagney@redhat.com>

	* Config.javain: Add BUILDDIR and SRCDIR.

2005-09-11  Andrew Cagney  <cagney@redhat.com>

	* Config.javain: Make public.

	* Config.javain: New file.

	* ftrace.java: New file.

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: