@@ -1,3 +1,7 @@
+2005-12-13  Andrew Cagney  <cagney@redhat.com>
+
+	* ftrace.java: Delete reference to Proc .observableTaskAdded.
+
 2005-12-12  Andrew Cagney  <cagney@redhat.com>
 
 	* ftrace.java: Delete reference to Proc .observableTaskRemoved.
